--- a/pom.xml
+++ b/pom.xml
@@ -120,25 +120,18 @@
             <version>1.8.8</version>
             <scope>provided</scope>
         </dependency>
-        <!--Vault-->
+        <!--LibCore-->
         <dependency>
-            <groupId>com.fyxridd.lib</groupId>
-            <artifactId>Vault</artifactId>
-            <version>1.8.8</version>
+            <groupId>com.fyxridd</groupId>
+            <artifactId>LibCore</artifactId>
+            <version>[0.0.1,)</version>
             <scope>provided</scope>
         </dependency>
-        <!--ProtocolLib-->
+        <!--LibFunc-->
         <dependency>
-            <groupId>com.fyxridd.lib</groupId>
-            <artifactId>ProtocolLib</artifactId>
-            <version>1.8.8</version>
-            <scope>provided</scope>
-        </dependency>
-        <!--PacketWrapper-->
-        <dependency>
-            <groupId>com.fyxridd.lib</groupId>
-            <artifactId>PacketWrapper</artifactId>
-            <version>1.8.8</version>
+            <groupId>com.fyxridd</groupId>
+            <artifactId>LibFunc</artifactId>
+            <version>[0.0.1,)</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
