--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,9 +1,21 @@
 ﻿#################################
-#####         语言          #####
-#################################
-lang:
-  cn: "lang_cn.yml"
-  
-#################################
 #####         配置          #####
 #################################
+show:
+  itemFuncPrefix: "item"
+
+#################################
+#####       确认配置        #####
+#################################
+#内容栏为1行
+confirm:
+  info:
+    item: 340
+  approve:
+    pos: 2                     #在操作栏中的位置
+    item: 2257
+    name: "&a确定"
+  cancel:
+    pos: 6
+    item: 2258
+    name: "&c取消"
